# satchmo-smt

./: Main.hs  satchmo-smt.cabal
Satchmo/SMT/: Arctic.hs  Config.hs  Dictionary.hs  Integer.hs  Linear.hs  Matrix.hs  Solve.hs  ToTerm.hs
Satchmo/SMT/Exotic/: Arctic.hs  Check.hs  Dict.hs  Fuzzy.hs  Generate.hs  Solve.hs  Transform.hs  Tropical.hs  Util.hs
Satchmo/SMT/Exotic/Semiring/: Integer.hs  Rational.hs
Satchmo/SMT/Opt/: Base.hs  Integer.hs
