Name:           satchmo-smt
Version:        0.4.1

License:        GPL
License-file:	gpl-2.0.txt
Author:         Johannes Waldmann
Maintainer:	Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/satchmo/
Synopsis:       SMT solver via SAT encoding
description:	SMT solver via SAT encoding
Category:	Algorithms
Cabal-version: >= 1.2
Build-type: Simple

Library
    build-depends: satchmo>=2.8, smt-lib>=0.0.4,
        obdd>=0.2.5,
        process, base==4.*, containers, array, mtl
    exposed-modules: 
        -- Satchmo.SMT.Exotic.Check
        -- Satchmo.SMT.Exotic.Util
        Satchmo.SMT.Exotic.Dict
        -- Satchmo.SMT.Exotic.Solve
        -- Satchmo.SMT.Exotic.Fuzzy
        Satchmo.SMT.Exotic.Arctic
        Satchmo.SMT.Exotic.Tropical
        -- Satchmo.SMT.Exotic.Generate
        Satchmo.SMT.Exotic.Semiring
        -- Satchmo.SMT.Exotic.Semiring.Rational
        Satchmo.SMT.Exotic.Semiring.Class
        Satchmo.SMT.Exotic.Semiring.Tropical
        Satchmo.SMT.Exotic.Semiring.Fuzzy
        Satchmo.SMT.Exotic.Semiring.Integer
        Satchmo.SMT.Exotic.Semiring.Arctic
        -- Satchmo.SMT.Exotic.Transform
        -- Satchmo.SMT.Solve
        Satchmo.SMT.Dictionary
        Satchmo.SMT.Integer
        Satchmo.SMT.Arctic
        Satchmo.SMT.Opt.Integer
        Satchmo.SMT.Opt.Base
        Satchmo.SMT.Matrix
        Satchmo.SMT.Linear
        Satchmo.SMT.Config

Executable satchmo-smt
    Main-is: Main.hs
    ghc-options: -threaded -rtsopts
    hs-source-dirs:	.
    Build-depends: satchmo>=2.8, smt-lib>=0.0.4,
        process, base == 4.*, containers, array, mtl
	

